--- a/style.css
+++ b/style.css
@@ -1,51 +1,81 @@
 body {
   background-color:#383838;
 }
+.title{
+  position:absolute;
+  color:white;
+  font-family:verdana;
+  margin-top: 8px;
+  margin-left: 25px;
+}
+.setup-text {
+  font-size:25px;
+  color:white;
+  font-family:verdana;
+  margin-left: 25%;
+  margin-top: 5px;
+}
+.buy-text {
+  font-size:25px;
+  color:white;
+  font-family:verdana;
+  margin-left: 32%;
+  margin-top: 5px;
+}
+.specs-text {
+  font-size:25px;
+  color:white;
+  font-family:verdana;
+  margin-left: 25%;
+  margin-top: 5px;
+}
 
 .page-selection {
   background-color:#141414;
-  height:40px;
-  width:40%;
+  height:60px;
+  width:102%;
   border-style:solid;
-  border-radius:20px;
+  border-radius:5px;
   border-width:2px;
+  margin-top: -0.6%;
+  margin-left: -0.7%;
   border-color:#808080;
 }
 .home-button {
-  left:7.5%;
+  left:30%;
   position:absolute;
   background-color: #383838;
-  height:25px;
-  width:5%;
+  height:40px;
+  width:10%;
   border-style:solid;
-  border-radius:20px;
+  border-radius:5px;
   border-width:2px;
   border-color:#808080;
-  margin-top: 5px;
+  margin-top: 8px;
 }
 .setup-button {
-  left:17.5%;
+  left:45%;
   position:absolute;
   background-color: #383838;
-  height:25px;
-  width:5%;
+  height:40px;
+  width:10%;
   border-style:solid;
-  border-radius:20px;
+  border-radius:5px;
   border-width:2px;
   border-color:#808080;
-  margin-top: 5px;
+  margin-top: 8px;
 }
 .recommend-button {
-  left:27.5%;
+  left:60%;
   position:absolute;
   background-color: #383838;
-  height:25px;
-  width:5%;
+  height:40px;
+  width:10%;
   border-style:solid;
-  border-radius:20px;
+  border-radius:5px;
   border-width:2px;
   border-color:#808080;
-  margin-top: 5px;
+  margin-top: 8px;
 }
 
 .h1 {
