--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 .color-button {
   left:85%;
   position:absolute;
-  background-color:Black;
+  background-color:black;
   height:40px;
   width:10%;
   border-style:solid;
@@ -115,6 +115,24 @@ body {
   margin-top:-125px;
   margin-left: 400px;
   color:white;
-
-
+}
+.home-text {
+  text-align: center;
+  font-family: verdana;
+  color:white;
+}
+.table {
+  position:absolute;
+  left:22%;
+  width:1000px;
+  height:200px;
+  border-style:solid;
+  border-radius: 15px;
+  padding:10px;
+  margin-top:50px;
+  background-color: #141414;
+  font-family:verdana;
+  color:white;
+  border-color:#808080;
+  border-width:5px;
 }
