--- a/style.css
+++ b/style.css
@@ -1,99 +1,13 @@
 body {
   background-color:#383838;
 }
-.title{
-  position:absolute;
-  color:white;
-  font-family:verdana;
-  margin-top: 8px;
-  margin-left: 25px;
-}
-.setup-text {
-  font-size:25px;
-  color:white;
-  font-family:verdana;
-  margin-left: 25%;
-  margin-top: 5px;
-}
-.buy-text {
-  font-size:25px;
-  color:white;
-  font-family:verdana;
-  margin-left: 32%;
-  margin-top: 5px;
-}
-.specs-text {
-  font-size:25px;
-  color:white;
-  font-family:verdana;
-  margin-left: 25%;
-  margin-top: 5px;
-}
-.color-button {
-  left:85%;
-  position:absolute;
-  background-color:black;
-  height:40px;
-  width:10%;
-  border-style:solid;
-  border-radius:5px;
-  border-width:2px;
-  border-color:#808080;
-  margin-top: 8px;
-}
 
-.page-selection {
-  background-color:#141414;
-  height:60px;
-  width:102%;
-  border-style:solid;
-  border-radius:5px;
-  border-width:2px;
-  margin-top: -0.6%;
-  margin-left: -0.7%;
-  border-color:#808080;
-}
-.setup-button {
-  left:30%;
-  position:absolute;
-  background-color: #383838;
-  height:40px;
-  width:10%;
-  border-style:solid;
-  border-radius:5px;
-  border-width:2px;
-  border-color:#808080;
-  margin-top: 8px;
-}
-.buy-button {
-  left:45%;
-  position:absolute;
-  background-color: #383838;
-  height:40px;
-  width:10%;
-  border-style:solid;
-  border-radius:5px;
-  border-width:2px;
-  border-color:#808080;
-  margin-top: 8px;
-}
-.specs-button {
-  left:60%;
-  position:absolute;
-  background-color: #383838;
-  height:40px;
-  width:10%;
-  border-style:solid;
-  border-radius:5px;
-  border-width:2px;
-  border-color:#808080;
-  margin-top: 8px;
-}
+
 .content-box-1 {
   width:600px;
   height:300px;
   border-style: solid;
-  background-color:#141414;
+  background-color:white;
   border-color:#808080;
   border-width: 5px;
   border-radius: 30px;
@@ -102,7 +16,7 @@ body {
   width:80%;
   height:200px;
   border-style:solid;
-  background-color:#141414;
+  background-color:black;
   border-color:#808080;
   border-width: 5px;
   border-radius: 30px;
@@ -110,39 +24,23 @@ body {
   margin-left: 10px;
 }
 .projdesc1 {
-  font-family:verdana;
   font-size: 60px;
   margin-top:-125px;
   margin-left: 400px;
   color:white;
 }
-.home-text {
-  text-align: center;
-  font-family: verdana;
-  color:white;
-}
+
 .table {
   position:absolute;
-  left:22%;
   width:1000px;
   height:200px;
   border-style:solid;
   border-radius: 15px;
   padding:10px;
   margin-top:50px;
-  background-color: #141414;
+  background-color: white;
   font-family:verdana;
   color:white;
   border-color:#808080;
   border-width:5px;
-}
-
-.setup-titles {
-  font-family:verdana;
-  color: white;
-}
-.text {
-  font-family:verdana;
-  color: white;
-
 }
